syntax = "proto3";
import "google/protobuf/timestamp.proto";

package order;

message Order {
    int64 order_id = 1;
    int64 user_id = 2;
    int64 product_id = 3;
    int32 quantity = 4; 
    google.protobuf.Timestamp created_at = 5;
}

message CreateOrders {
    repeated Order orders = 1;  
}

message UpdateOrders {
    repeated Order orders = 1;  
}

message DeleteOrders {
    repeated int64 order_ids = 1; 
}

// If id < 0, get all
message GetOrder {
    int64 order_id = 1;  
}
